# ugraph

./: .dir-locals.el  .gitignore  CMakeLists.txt  Dockerfile  README.md  peru.yaml  requirements.txt  run-docker.sh
Reproducibility/: README.md  conda-environment.yml  experiment.py  figures.py  run.sh  tables.py
Reproducibility/Data/dblp/: README.txt  create-from-scratch.sh  dblp.py
Reproducibility/Data/proteins/: README.txt  TAP_clusters.txt  TAP_core.txt  TAP_ground.txt  collins2007-lcc.txt  collins2007.txt  gavin2006-lcc.txt  gavin2006_socioaffinities_rescaled.txt  krogan2006_core-lcc.txt  krogan2006_core.txt  krogan2006_extended-lcc.txt  krogan2006_extended.txt
core/: CMakeLists.txt  acpc-run.cpp  acpc.hpp  acpc2-run.cpp  acpc2.hpp  average_probability.cpp  average_probability_clustering.hpp  avg-prob.cpp  bfs_sampler.cpp  bfs_sampler.hpp  cc_sampler.cpp  cc_sampler.hpp  cluster_vertex.hpp  concurrent.cpp  concurrent_clustering.cpp  concurrent_clustering.hpp  connected_components.cpp  connected_components.hpp  counts_cache.hpp  experiment_reporter.hpp  gmm.cpp  guesser.hpp  io.cpp  io.hpp  logging.cpp  logging.hpp  mcpc-run.cpp  mcpc.hpp  prelude.hpp  rand.cpp  rand.hpp  require.hpp  sampler.cpp  sampler.hpp  score_computer.cpp  scores.cpp  scores.hpp  scratch.cpp  sequential.cpp  sequential_clustering.cpp  (+3 more)
scripts/: confusion.py  krogan_ground_truth.py  lcc.py  mcl.py  mips.py  pkwik.py  result2pairs.py
src/: CMakeLists.txt  git_info.cpp.in
